syntax="proto3";

option java_package="com.example.finaldemo.proto";
option java_multiple_files=true;
message UserDTO{
  string name = 1;
  optional string id = 2;
  string email = 3;
  string password = 4;
  double balance=5;
  string created_ts=8;
  string updated_ts=9;
}
message UserResponseDto{
  string status=1;
  repeated UserDTO data=2;
}